second changed commit code

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us | Radio Streaming Service</title>
     <meta name="description"
-        content="Learn about our mission as an Authorized Digital Partner for SiriusXM to provide premier support.">
+        content="Learn about our mission as independent radio consultants providing premier strategic support.">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -37,8 +37,8 @@
         style="padding-top: 140px; padding-bottom: 60px; background: linear-gradient(135deg, #0F172A 0%, #1e293b 100%); color: var(--white);">
         <div class="container text-center">
             <h1 style="font-size: 3rem; margin-bottom: 20px;">Who We Are</h1>
-            <p style="max-width: 600px; margin: 0 auto; opacity: 0.9;">Your trusted partner for satellite radio support
-                and services.</p>
+            <p style="max-width: 600px; margin: 0 auto; opacity: 0.9;">Leading consultants for the future of radio and
+                audio streaming.</p>
         </div>
     </section>
 
@@ -47,50 +47,40 @@
         <div class="container" style="max-width: 900px;">
             <div style="font-size: 1.1rem; color: var(--text-dark);">
                 <p style="margin-bottom: 24px;">
-                    <strong>Radio Streaming Service</strong> is an Authorized Digital Partner ( ADDOSYS TECHNOLOGIES
-                    PRIVATE LIMITED ) working in collaboration with SiriusXM. We specialize in providing expert support,
-                    activation assistance, and account management for radio listeners.
+                    <strong>Radio Streaming Service</strong> is a team of independent media consultants specialized in
+                    radio broadcasting and digital audio strategy. We partner with stations, networks, and brands to
+                    build robust audio infrastructure and grow audience reach.
                 </p>
                 <p style="margin-bottom: 24px;">
-                    Our mission is to ensure you have the best possible listening experience. Whether you need help
-                    setting up a new device, managing your subscription, or troubleshooting technical issues, our
-                    dedicated team is here to assist you.
+                    Our mission is to empower broadcasters with the technical expertise and strategic insight needed to
+                    thrive in a digital-first world. From transmitter sites to mobile apps, we cover the entire audio
+                    ecosystem.
                 </p>
                 <p style="margin-bottom: 24px;">
-                    We pride ourselves on delivering accurate, timely, and helpful solutions to keep you connected to
-                    the music, news, and entertainment you love.
+                    We pride ourselves on delivering objective, vendor-agnostic advice that puts your business goals
+                    first.
                 </p>
 
                 <h2 style="color: var(--primary-color); margin-top: 40px; margin-bottom: 20px;">Why Choose Us?</h2>
                 <ul style="list-style: none;">
                     <li style="margin-bottom: 12px; display: flex; align-items: center; gap: 10px;">
                         <span style="color: var(--secondary-color); font-size: 1.25rem;">✔️</span>
-                        Authorized Partner: We work directly to support official services.
+                        Industry Veterans: Decades of combined experience in broadcast engineering.
                     </li>
                     <li style="margin-bottom: 12px; display: flex; align-items: center; gap: 10px;">
                         <span style="color: var(--secondary-color); font-size: 1.25rem;">✔️</span>
-                        Expert Support: Knowledgeable staff ready to solve your problems.
+                        Technical Mastery: Deep knowledge of RF systems, AoIP, and streaming protocols.
                     </li>
                     <li style="margin-bottom: 12px; display: flex; align-items: center; gap: 10px;">
                         <span style="color: var(--secondary-color); font-size: 1.25rem;">✔️</span>
-                        Customer Focus: Your satisfaction is our top priority.
+                        Strategic Growth: Proven track record of increasing station engagement and revenue.
                     </li>
                 </ul>
             </div>
         </div>
     </section>
 
-    <!-- Disclaimer Section -->
-    <section
-        style="background: #0f172a; color: #64748b; padding: 40px 0; font-size: 0.8rem; border-top: 1px solid #1e293b;">
-        <div class="container">
-            <p style="margin-bottom: 10px;"><strong>Disclaimer/Important Notice:</strong> This website/service is
-                operated by an Authorized Digital Partner ( ADDOSYS TECHNOLOGIES PRIVATE LIMITED ) of SiriusXM and is
-                not owned, operated, or maintained by SiriusXM Radio Inc. or its corporate affiliates.</p>
-            <p>All SiriusXM trademarks, service marks, and logos are the property of SiriusXM Radio Inc. and are used
-                under Authorization.</p>
-        </div>
-    </section>
+    <!-- Disclaimer Removed -->
 
     <!-- Footer -->
     <footer class="footer">
@@ -99,8 +89,8 @@
                 <div>
                     <h3 style="font-size: 1.5rem; color: var(--white); margin-bottom: 20px;">Radio<span
                             class="text-accent">Streaming</span></h3>
-                    <p style="color: #94A3B8; max-width: 300px;">Your trusted partner for satellite radio services and
-                        support.</p>
+                    <p style="color: #94A3B8; max-width: 300px;">Premier radio consultancy and technical solutions
+                        provider.</p>
                 </div>
                 <div>
                     <h3>Quick Links</h3>
