--- a/contact.html
+++ b/contact.html
@@ -37,8 +37,8 @@
         style="padding-top: 140px; padding-bottom: 60px; background: var(--background-white);">
         <div class="container text-center">
             <h1 style="font-size: 3rem; color: var(--primary-color); margin-bottom: 20px;">Contact Us</h1>
-            <p class="text-light" style="max-width: 600px; margin: 0 auto;">Have a question about your subscription or
-                need troubleshooting help? We're here to assist.</p>
+            <p class="text-light" style="max-width: 600px; margin: 0 auto;">Ready to elevate your radio station? Get in
+                touch with our experts today.</p>
         </div>
     </section>
 
@@ -88,10 +88,10 @@
                         <div class="form-group">
                             <label for="subject">Subject</label>
                             <select id="subject" name="subject">
-                                <option value="Activation">Activation Help</option>
-                                <option value="Billing">Billing Question</option>
-                                <option value="Technical Support">Technical Support</option>
-                                <option value="Other">Other</option>
+                                <option value="Consultation">Consultation Request</option>
+                                <option value="Audit">Technical Audit</option>
+                                <option value="Infrastructure">Infrastructure Planning</option>
+                                <option value="Other">General Inquiry</option>
                             </select>
                         </div>
                         <div class="form-group">
@@ -107,17 +107,7 @@
         </div>
     </section>
 
-    <!-- Disclaimer Section -->
-    <section
-        style="background: #0f172a; color: #64748b; padding: 40px 0; font-size: 0.8rem; border-top: 1px solid #1e293b;">
-        <div class="container">
-            <p style="margin-bottom: 10px;"><strong>Disclaimer/Important Notice:</strong> This website/service is
-                operated by an Authorized Digital Partner ( ADDOSYS TECHNOLOGIES PRIVATE LIMITED ) of SiriusXM and is
-                not owned, operated, or maintained by SiriusXM Radio Inc. or its corporate affiliates.</p>
-            <p>All SiriusXM trademarks, service marks, and logos are the property of SiriusXM Radio Inc. and are used
-                under Authorization.</p>
-        </div>
-    </section>
+    <!-- Disclaimer Removed -->
 
     <!-- Footer -->
     <footer class="footer">
@@ -126,8 +116,8 @@
                 <div>
                     <h3 style="font-size: 1.5rem; color: var(--white); margin-bottom: 20px;">Radio<span
                             class="text-accent">Streaming</span></h3>
-                    <p style="color: #94A3B8; max-width: 300px;">Your trusted partner for satellite radio services and
-                        support.</p>
+                    <p style="color: #94A3B8; max-width: 300px;">Premier radio consultancy and technical solutions
+                        provider.</p>
                 </div>
                 <div>
                     <h3>Quick Links</h3>
