--- a/privacy.html
+++ b/privacy.html
@@ -36,9 +36,8 @@
             <p><strong>Effective Date:</strong> January 1, 2024</p>
             <br>
 
-            <p>Your privacy is important to us. It is <strong>Radio Streaming Service's</strong> (operated by ADDOSYS
-                TECHNOLOGIES PRIVATE LIMITED) policy to respect your privacy regarding any information we may collect
-                from you across our website.</p>
+            <p>Your privacy is important to us. It is <strong>Radio Streaming Service's</strong> policy to respect your
+                privacy regarding any information we may collect from you across our website.</p>
 
             <h2 style="margin-top: 30px; margin-bottom: 16px;">1. Information We Collect</h2>
             <p>We only ask for personal information when we truly need it to provide a service to you. We collect it by
@@ -55,9 +54,7 @@
                 disclosure. However, no method of transmission over the internet or electronic storage is 100% secure.
             </p>
 
-            <h2 style="margin-top: 30px; margin-bottom: 16px;">4. Authorized Partner Disclaimer</h2>
-            <p>We are an Authorized Digital Partner of SiriusXM. Any information you provide to us for subscription
-                activation may be shared with SiriusXM for valid account creation purposes.</p>
+            <!-- Disclaimer Removed -->
 
             <h2 style="margin-top: 30px; margin-bottom: 16px;">5. Contact Us</h2>
             <p>If you have any questions about our privacy policy, please contact us at info@radiostreamingservice.com.
@@ -65,17 +62,7 @@
         </div>
     </section>
 
-    <!-- Disclaimer Section -->
-    <section
-        style="background: #0f172a; color: #64748b; padding: 40px 0; font-size: 0.8rem; border-top: 1px solid #1e293b;">
-        <div class="container">
-            <p style="margin-bottom: 10px;"><strong>Disclaimer/Important Notice:</strong> This website/service is
-                operated by an Authorized Digital Partner ( ADDOSYS TECHNOLOGIES PRIVATE LIMITED ) of SiriusXM and is
-                not owned, operated, or maintained by SiriusXM Radio Inc. or its corporate affiliates.</p>
-            <p>All SiriusXM trademarks, service marks, and logos are the property of SiriusXM Radio Inc. and are used
-                under Authorization.</p>
-        </div>
-    </section>
+    <!-- Disclaimer Removed -->
 
     <!-- Footer -->
     <footer class="footer">
@@ -84,8 +71,8 @@
                 <div>
                     <h3 style="font-size: 1.5rem; color: var(--white); margin-bottom: 20px;">Radio<span
                             class="text-accent">Streaming</span></h3>
-                    <p style="color: #94A3B8; max-width: 300px;">Your trusted partner for satellite radio services and
-                        support.</p>
+                    <p style="color: #94A3B8; max-width: 300px;">Premier radio consultancy and technical solutions
+                        provider.</p>
                 </div>
                 <div>
                     <h3>Quick Links</h3>
