--- a/services.html
+++ b/services.html
@@ -36,9 +36,9 @@
     <section class="section-padding"
         style="padding-top: 140px; padding-bottom: 60px; background: var(--background-white);">
         <div class="container text-center">
-            <h1 style="font-size: 3rem; color: var(--primary-color); margin-bottom: 20px;">Our Support Services</h1>
-            <p class="text-light" style="max-width: 600px; margin: 0 auto;">Comprehensive assistance for all your
-                satellite radio needs. From activation to advanced troubleshooting, we're here to help.</p>
+            <h1 style="font-size: 3rem; color: var(--primary-color); margin-bottom: 20px;">Our Consultancy Services</h1>
+            <p class="text-light" style="max-width: 600px; margin: 0 auto;">Comprehensive strategic and technical
+                guidance for radio broadcasters and audio platforms.</p>
         </div>
     </section>
 
@@ -50,27 +50,28 @@
                 <!-- Service 1 -->
                 <div class="feature-card">
                     <div class="icon-box">📡</div>
-                    <h3>Radio Activation</h3>
-                    <p class="text-light" style="margin-bottom: 16px;">Step-by-step guidance to get your satellite radio
-                        service up and running quickly.</p>
+                    <h3>Radio Network Planning</h3>
+                    <p class="text-light" style="margin-bottom: 16px;">Strategic coverage analysis and infrastructure
+                        rollout planning for terrestrial and digital networks.</p>
                     <ul style="list-style: none; margin-bottom: 24px; color: var(--text-dark);">
-                        <li style="margin-bottom: 8px;">✔️ New Account Setup</li>
-                        <li style="margin-bottom: 8px;">✔️ Device Authorization</li>
-                        <li>✔️ Signal Refresh</li>
+                        <li style="margin-bottom: 8px;">✔️ Coverage Maps & Propagations</li>
+                        <li style="margin-bottom: 8px;">✔️ Hardware Selection</li>
+                        <li>✔️ Site Acquisition Strategy</li>
                     </ul>
-                    <a href="contact.html" class="btn btn-primary" style="width: 100%; text-align: center;">Get Help</a>
+                    <a href="contact.html" class="btn btn-primary" style="width: 100%; text-align: center;">Get
+                        Advice</a>
                 </div>
 
                 <!-- Service 2 -->
                 <div class="feature-card">
-                    <div class="icon-box">💳</div>
-                    <h3>Subscription Management</h3>
-                    <p class="text-light" style="margin-bottom: 16px;">We help you manage your plan, understand billing,
-                        and choose the right package.</p>
+                    <div class="icon-box">📜</div>
+                    <h3>Regulatory Compliance</h3>
+                    <p class="text-light" style="margin-bottom: 16px;">Navigating the complex landscape of broadcast
+                        licensing and music royalties.</p>
                     <ul style="list-style: none; margin-bottom: 24px; color: var(--text-dark);">
-                        <li style="margin-bottom: 8px;">✔️ Plan Upgrades/Downgrades</li>
-                        <li style="margin-bottom: 8px;">✔️ Billing Inquiries</li>
-                        <li>✔️ Renewal Assistance</li>
+                        <li style="margin-bottom: 8px;">✔️ Licensing Applications</li>
+                        <li style="margin-bottom: 8px;">✔️ Royalty Management</li>
+                        <li>✔️ FCC/Regulatory Filings</li>
                     </ul>
                     <a href="contact.html" class="btn btn-primary" style="width: 100%; text-align: center;">Contact
                         Us</a>
@@ -78,14 +79,14 @@
 
                 <!-- Service 3 -->
                 <div class="feature-card">
-                    <div class="icon-box">🎧</div>
-                    <h3>Streaming App Support</h3>
-                    <p class="text-light" style="margin-bottom: 16px;">Issues with the app? We provide troubleshooting
-                        for streaming on your phone or tablet.</p>
+                    <div class="icon-box">💻</div>
+                    <h3>Digital Streaming Strategy</h3>
+                    <p class="text-light" style="margin-bottom: 16px;">Maximize your audience reach with a robust online
+                        streaming and podcasting strategy.</p>
                     <ul style="list-style: none; margin-bottom: 24px; color: var(--text-dark);">
-                        <li style="margin-bottom: 8px;">✔️ Login Assistance</li>
-                        <li style="margin-bottom: 8px;">✔️ App Configuration</li>
-                        <li>✔️ Offline Listening Help</li>
+                        <li style="margin-bottom: 8px;">✔️ App Development Consulting</li>
+                        <li style="margin-bottom: 8px;">✔️ Server Architecture</li>
+                        <li>✔️ Monetization Strategy</li>
                     </ul>
                     <a href="contact.html" class="btn btn-primary" style="width: 100%; text-align: center;">Get
                         Support</a>
@@ -94,16 +95,16 @@
                 <!-- Service 4 -->
                 <div class="feature-card">
                     <div class="icon-box">🔧</div>
-                    <h3>Technical Troubleshooting</h3>
-                    <p class="text-light" style="margin-bottom: 16px;">Expert diagnosis for reception problems, hardware
-                        errors, and connection issues.</p>
+                    <h3>Technical Infrastructure Audit</h3>
+                    <p class="text-light" style="margin-bottom: 16px;">Identify bottlenecks and points of failure in
+                        your current transmission capability.</p>
                     <ul style="list-style: none; margin-bottom: 24px; color: var(--text-dark);">
-                        <li style="margin-bottom: 8px;">✔️ Signal Assessment</li>
-                        <li style="margin-bottom: 8px;">✔️ Hardware Diagnostics</li>
-                        <li>✔️ Installation Advice</li>
+                        <li style="margin-bottom: 8px;">✔️ Signal Quality Analysis</li>
+                        <li style="margin-bottom: 8px;">✔️ Equipment Lifecycle Checks</li>
+                        <li>✔️ Redundancy Planning</li>
                     </ul>
-                    <a href="contact.html" class="btn btn-primary" style="width: 100%; text-align: center;">Troubleshoot
-                        Now</a>
+                    <a href="contact.html" class="btn btn-primary" style="width: 100%; text-align: center;">Schedule
+                        Audit</a>
                 </div>
 
             </div>
@@ -122,17 +123,7 @@
         </div>
     </section>
 
-    <!-- Disclaimer Section -->
-    <section
-        style="background: #0f172a; color: #64748b; padding: 40px 0; font-size: 0.8rem; border-top: 1px solid #1e293b;">
-        <div class="container">
-            <p style="margin-bottom: 10px;"><strong>Disclaimer/Important Notice:</strong> This website/service is
-                operated by an Authorized Digital Partner ( ADDOSYS TECHNOLOGIES PRIVATE LIMITED ) of SiriusXM and is
-                not owned, operated, or maintained by SiriusXM Radio Inc. or its corporate affiliates.</p>
-            <p>All SiriusXM trademarks, service marks, and logos are the property of SiriusXM Radio Inc. and are used
-                under Authorization.</p>
-        </div>
-    </section>
+    <!-- Disclaimer Removed -->
 
     <!-- Footer -->
     <footer class="footer">
@@ -141,8 +132,8 @@
                 <div>
                     <h3 style="font-size: 1.5rem; color: var(--white); margin-bottom: 20px;">Radio<span
                             class="text-accent">Streaming</span></h3>
-                    <p style="color: #94A3B8; max-width: 300px;">Your trusted partner for satellite radio services and
-                        support.</p>
+                    <p style="color: #94A3B8; max-width: 300px;">Premier radio consultancy and technical solutions
+                        provider.</p>
                 </div>
                 <div>
                     <h3>Quick Links</h3>
