--- a/terms.html
+++ b/terms.html
@@ -40,13 +40,12 @@
                 these Terms and Conditions, all applicable laws and regulations.</p>
 
             <h2 style="margin-top: 30px; margin-bottom: 16px;">1. Service Description</h2>
-            <p>We provide consultation, activation assistance, and technical support for satellite radio services. We do
-                not own the satellite infrastructure but act as an Authorized Digital Partner to facilitate your access.
+            <p>We provide consultation, technical audits, and strategic advisory for radio and audio streaming
+                businesses. We are an independent consultancy and are not affiliated with any specific hardware
+                manufacturer or satellite provider.
             </p>
 
-            <h2 style="margin-top: 30px; margin-bottom: 16px;">2. Authorized Partner Status</h2>
-            <p>We are an Authorized Digital Partner of SiriusXM. All subscriptions and services related to SiriusXM are
-                subject to their specific terms and conditions.</p>
+            <!-- Partner Status Removed -->
 
             <h2 style="margin-top: 30px; margin-bottom: 16px;">3. Liability Service</h2>
             <p>We are not liable for interruptions in satellite service caused by weather, technical failures of the
@@ -61,17 +60,7 @@
         </div>
     </section>
 
-    <!-- Disclaimer Section -->
-    <section
-        style="background: #0f172a; color: #64748b; padding: 40px 0; font-size: 0.8rem; border-top: 1px solid #1e293b;">
-        <div class="container">
-            <p style="margin-bottom: 10px;"><strong>Disclaimer/Important Notice:</strong> This website/service is
-                operated by an Authorized Digital Partner ( ADDOSYS TECHNOLOGIES PRIVATE LIMITED ) of SiriusXM and is
-                not owned, operated, or maintained by SiriusXM Radio Inc. or its corporate affiliates.</p>
-            <p>All SiriusXM trademarks, service marks, and logos are the property of SiriusXM Radio Inc. and are used
-                under Authorization.</p>
-        </div>
-    </section>
+    <!-- Disclaimer Removed -->
 
     <!-- Footer -->
     <footer class="footer">
@@ -80,8 +69,8 @@
                 <div>
                     <h3 style="font-size: 1.5rem; color: var(--white); margin-bottom: 20px;">Radio<span
                             class="text-accent">Streaming</span></h3>
-                    <p style="color: #94A3B8; max-width: 300px;">Your trusted partner for satellite radio services and
-                        support.</p>
+                    <p style="color: #94A3B8; max-width: 300px;">Premier radio consultancy and technical solutions
+                        provider.</p>
                 </div>
                 <div>
                     <h3>Quick Links</h3>
