--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Radio Streaming Service | Authorized Digital Partner</title>
+    <title>Radio Streaming Consultants | Strategic & Technical Solutions</title>
     <meta name="description"
-        content="Authorized Digital Partner for SiriusXM. We provide activation, account management, and troubleshooting support.">
+        content="Expert radio consultancy services. We provide strategic planning, technical audits, and digital transformation for radio stations and streaming platforms.">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,20 +35,20 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="container">
-            <h1>Elevated In-Car <span class="text-primary">Entertainment</span><br>Start Listening Today</h1>
-            <p>We provide expert assistance for subscription activation, device troubleshooting, and account management
-                for your satellite radio services.</p>
+            <h1>Expert Radio <span class="text-primary">Consultancy</span><br>Strategic Solutions</h1>
+            <p>We provide expert strategic and technical consulting for radio stations, streaming platforms, and media
+                enterprises.</p>
             <div class="hero-cta">
-                <a href="tel:+15550000000" class="btn btn-primary">Call Support (555-000-0000)</a>
-                <a href="services.html" class="btn btn-outline">Our Services</a>
+                <a href="contact.html" class="btn btn-primary">Request Consultation</a>
+                <a href="services.html" class="btn btn-outline">Our Expertise</a>
             </div>
 
             <div
                 style="margin-top: 60px; display: flex; gap: 40px; justify-content: center; flex-wrap: wrap; opacity: 0.7;">
-                <!-- Placeholder for Trust Badges/Logos -->
-                <span>✔️ Authorized Partner</span>
-                <span>✔️ Expert Support</span>
-                <span>✔️ Instant Activation</span>
+                <!-- Credentials -->
+                <span>✔️ Expert Consultants</span>
+                <span>✔️ Strategic Planning</span>
+                <span>✔️ Technical Audits</span>
             </div>
         </div>
     </section>
@@ -57,28 +57,28 @@
     <section class="section-padding" style="background: var(--white);">
         <div class="container">
             <div class="text-center" style="max-width: 700px; margin: 0 auto 60px;">
-                <h2 style="font-size: 2.5rem; color: var(--primary-color); margin-bottom: 16px;">How We Help
+                <h2 style="font-size: 2.5rem; color: var(--primary-color); margin-bottom: 16px;">Our Expertise
                 </h2>
-                <p class="text-light">Your one-stop destination for all satellite radio inquiries and support needs.</p>
+                <p class="text-light">Professional guidance for modern radio and audio streaming businesses.</p>
             </div>
 
             <div class="features-grid">
                 <!-- Feature 1 -->
                 <div class="feature-card">
                     <div class="icon-box">📡</div>
-                    <h3>Activation Support</h3>
-                    <p style="color: var(--text-light); margin-top: 12px; margin-bottom: 24px;">Need help getting your
-                        new radio online? We guide you through the activation process step-by-step.</p>
+                    <h3>Network Planning</h3>
+                    <p style="color: var(--text-light); margin-top: 12px; margin-bottom: 24px;">Comprehensive coverage
+                        analysis, hardware selection, and infrastructure planning for broadcast networks.</p>
                     <a href="services.html" style="color: var(--secondary-color); font-weight: 600;">Learn more
                         &rarr;</a>
                 </div>
 
                 <!-- Feature 2 -->
                 <div class="feature-card">
-                    <div class="icon-box">🎧</div>
-                    <h3>Account Management</h3>
-                    <p style="color: var(--text-light); margin-top: 12px; margin-bottom: 24px;">Assistance with plan
-                        upgrades, billing questions, and subscription renewals.</p>
+                    <div class="icon-box">🎙️</div>
+                    <h3>Studio Setup</h3>
+                    <p style="color: var(--text-light); margin-top: 12px; margin-bottom: 24px;">End-to-end design and
+                        consultation for professional broadcast studios and podcasting environments.</p>
                     <a href="services.html" style="color: var(--secondary-color); font-weight: 600;">Learn more
                         &rarr;</a>
                 </div>
@@ -86,10 +86,10 @@
                 <!-- Feature 3 -->
                 <div class="feature-card">
                     <div class="icon-box">🔧</div>
-                    <h3>Technical Troubleshooting</h3>
-                    <p style="color: var(--text-light); margin-top: 12px; margin-bottom: 24px;">Having signal issues?
-                        Our experts can help diagnose and resolve reception problems.</p>
-                    <a href="contact.html" style="color: var(--secondary-color); font-weight: 600;">Get Support
+                    <h3>Technical Audits</h3>
+                    <p style="color: var(--text-light); margin-top: 12px; margin-bottom: 24px;">Deep-dive assessment of
+                        your current transmission chain, audio processing, and digital delivery systems.</p>
+                    <a href="contact.html" style="color: var(--secondary-color); font-weight: 600;">Request Audit
                         &rarr;</a>
                 </div>
             </div>
@@ -99,24 +99,14 @@
     <!-- Call to Action Band -->
     <section class="section-padding" style="background: var(--primary-color); color: var(--white); text-align: center;">
         <div class="container">
-            <h2 style="font-size: 2.5rem; margin-bottom: 24px;">Enhance Your Drive</h2>
-            <p style="max-width: 600px; margin: 0 auto 40px; color: #94A3B8;">Experience ad-free music, talk, news, and
-                sports. We make it easy to stay connected.</p>
-            <a href="contact.html" class="btn btn-primary" style="background: var(--accent-color);">Contact Us Today</a>
+            <h2 style="font-size: 2.5rem; margin-bottom: 24px;">Transform Your Station</h2>
+            <p style="max-width: 600px; margin: 0 auto 40px; color: #94A3B8;">Leverage our decades of industry
+                experience to optimize your operations and reach more listeners.</p>
+            <a href="contact.html" class="btn btn-primary" style="background: var(--accent-color);">Start consulting</a>
         </div>
     </section>
 
-    <!-- Disclaimer Section -->
-    <section
-        style="background: #0f172a; color: #64748b; padding: 40px 0; font-size: 0.8rem; border-top: 1px solid #1e293b;">
-        <div class="container">
-            <p style="margin-bottom: 10px;"><strong>Disclaimer/Important Notice:</strong> This website/service is
-                operated by an Authorized Digital Partner ( ADDOSYS TECHNOLOGIES PRIVATE LIMITED ) of SiriusXM and is
-                not owned, operated, or maintained by SiriusXM Radio Inc. or its corporate affiliates.</p>
-            <p>All SiriusXM trademarks, service marks, and logos are the property of SiriusXM Radio Inc. and are used
-                under Authorization.</p>
-        </div>
-    </section>
+    <!-- Disclaimer Removed -->
 
     <!-- Footer -->
     <footer class="footer">
@@ -125,8 +115,8 @@
                 <div>
                     <h3 style="font-size: 1.5rem; color: var(--white); margin-bottom: 20px;">Radio<span
                             class="text-accent">Streaming</span></h3>
-                    <p style="color: #94A3B8; max-width: 300px;">Your trusted partner for satellite radio services and
-                        support.</p>
+                    <p style="color: #94A3B8; max-width: 300px;">Premier radio consultancy and technical solutions
+                        provider.</p>
                 </div>
                 <div>
                     <h3>Quick Links</h3>
